[] - Creadas carpetas js y css. Implementada funcionalidad de bloquear notas al fallar o al acabar la canción.

--- a/ejemploPiano/css/style.css
+++ b/ejemploPiano/css/style.css
@@ -1,5 +1,32 @@
+.user-select-none {
+    user-select: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    -o-user-select: none;
+  }
+  
 body{
     background-color: #f1f1f1;
+}
+
+#Titulos{
+    margin-top: 20px;
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+
+#completion-message{
+    font-size: 36px;
+    background: linear-gradient(to right, red, orange, yellow, green, blue, indigo, violet);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    margin-bottom: 20px;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
+    font-family: 'Arial Black', sans-serif;
+    text-align: center;
 }
 
 .piano-container{
